# dev-5

./: .gitignore  .gitmodules  CMakeLists.txt
fbxsdk/samples/Animation/: Makefile
fbxsdk/samples/Audio/: Makefile
fbxsdk/samples/Camera/: Makefile
fbxsdk/samples/ConvertScene/: Makefile
fbxsdk/samples/ExportDocument/: Makefile
fbxsdk/samples/ExportScene01/: Makefile
fbxsdk/samples/ExportScene02/: Makefile
fbxsdk/samples/ExportScene03/: Makefile
fbxsdk/samples/ExportScene04/: Makefile
fbxsdk/samples/ExportScene05/: Makefile
fbxsdk/samples/ExportShader/: Makefile
fbxsdk/samples/FileStream/: Makefile
fbxsdk/samples/ImportScene/: Makefile
fbxsdk/samples/Instances/: Makefile
fbxsdk/samples/Layers/: Makefile
fbxsdk/samples/Normals/: Makefile
fbxsdk/samples/Pivot/: Makefile
fbxsdk/samples/ProceduralTexture/: Makefile
fbxsdk/samples/StereoCamera/: Makefile
fbxsdk/samples/SwitchBinding/: Makefile
fbxsdk/samples/Transformations/: Makefile
fbxsdk/samples/UVSample/: Makefile
fbxsdk/samples/UserProperties/: Makefile
fbxsdk/samples/ViewScene/: Makefile
res/: build.sh  frag.glsl  frag.spv  line_frag.glsl  line_frag.spv  line_vert.glsl  line_vert.spv  vert.glsl  vert.spv
src/: fbx_loading.cpp  fbx_loading.h  includes.h  main.cpp  pipelines.cpp  pipelines.h
